add delete edit  ok

--- a/ProjectBontodev1.csproj
+++ b/ProjectBontodev1.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Project1BontodevDataSet.xsc">
       <DependentUpon>Project1BontodevDataSet.xsd</DependentUpon>
@@ -136,6 +137,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Img\book_PNG51075.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Img\C#.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
