เสร็จแล้วเรียบร้อย

--- a/ProjectBontodev1.csproj
+++ b/ProjectBontodev1.csproj
@@ -104,6 +104,9 @@
     <EmbeddedResource Include="Manage Customer Information.resx">
       <DependentUpon>Manage Customer Information.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Order Book.resx">
+      <DependentUpon>Order Book.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
